--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## Spring Datasource
 spring.datasource.url=jdbc:mysql://localhost:3306/mycrud
-spring.datasource.username=root
-spring.datasource.password=sonhabn123
+spring.datasource.username=************
+spring.datasource.password=****************************
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #fix issue Table 'test.hibernate_sequence' doesn't exist
@@ -13,8 +13,8 @@ spring.jpa.open-in-view=false
 server.port=8081
 
 #oauth2
-spring.security.oauth2.client.registration.google.client-id=*******************8*
-spring.security.oauth2.client.registration.google.client-secret=***********************************
+spring.security.oauth2.client.registration.google.client-id=****************************
+spring.security.oauth2.client.registration.google.client-secret=****************************
 spring.security.oauth2.client.registration.google.scope=email,profile
 spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8081/login/oauth2/code/google
 #spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
@@ -32,7 +32,7 @@ spring.mail.from=${SPRING_MAIL_FROM:tunjin123@gmail.com}
 spring.mail.host=${SPRING_MAIL_HOST:smtp.gmail.com}
 spring.mail.port=${SPRING_MAIL_PORT:587}
 spring.mail.username=${SPRING_MAIL_USERNAME:tunjin123@gmail.com}
-spring.mail.password=${SPRING_MAIL_PASSWORD:ackq bwkr oadf slnz}
+spring.mail.password=${SPRING_MAIL_PASSWORD:****************************}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
@@ -46,6 +46,6 @@ spring.mvc.static-path-pattern=/static/**
 #redis
 spring.data.redis.host=10.1.125.77
 spring.data.redis.port=6379
-spring.data.redis.password=eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81
+spring.data.redis.password=****************************
 
 spring.thymeleaf.check-template-location=false
