UI auth & redis

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -16,7 +16,7 @@ server.port=8081
 spring.security.oauth2.client.registration.google.client-id=****************************
 spring.security.oauth2.client.registration.google.client-secret=****************************
 spring.security.oauth2.client.registration.google.scope=email,profile
-spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8081/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8081/auth/oauth2/code/google
 #spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
 #spring.security.oauth2.client.provider.google.token-uri=https://accounts.google.com/o/oauth2/token
 #spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
@@ -44,7 +44,7 @@ forgetpassword.token.expired=${FORGETPASSWORD_TOKEN_EXPIRED:5}
 spring.mvc.static-path-pattern=/static/**
 
 #redis
-spring.data.redis.host=10.1.125.77
+spring.data.redis.host=localhost
 spring.data.redis.port=6379
 spring.data.redis.password=****************************
 
