--- a/backend/Docker-compose.yaml
+++ b/backend/Docker-compose.yaml
@@ -2,9 +2,9 @@ version: '3.9'
 
 services:
   redis:
-    container_name: redis-server
+    container_name: redis_server
     image: redis:latest
-    command: [ "redis-server", "/etc/redis/redis.conf" ]
+    command: [ "redis-server", "/etc/redis/redis.conf", "--bind", "0.0.0.0" ]
     volumes:
       - ./redis.conf:/etc/redis/redis.conf
     ports:
