--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,13 @@
     "@headlessui/react": "^2.2.0",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
+    "frontend": "file:",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-i18next": "^15.1.3",
+    "react-router-dom": "^7.0.2",
     "swiper": "^11.1.15",
     "tailwind-merge": "^2.5.4"
   },
